# world-cup-2026-betting-model

./: .Rprofile  .env.example  .gitignore  AGENTS.md  MIGRATION.md  MODEL_RUNNER.md  PROJECT_OS.md  README.md  ROADMAP.md  SECURITY.md  _quarto.yml  app_options.md  current_data_status.md  data_inventory.md  github_publish_plan.md  index.html  index.qmd  local_update_workflow.md  modeling_notes_goals_lm.md  news_ingestion_plan.md  pyproject.toml  robots.txt  search.json  sitemap.xml  source_landscape.md  styles.css  windows_setup.md
R/: 00_setup.R  01_build_duckdb.R  02_check_python_bridge.R  03_first_queries.R  04_fetch_public_data_from_rstudio.R  05_check_app_readiness.R  06_data_inventory.R  07_export_metadata.R  10_fit_linear_goals_model.R  11_fit_ordinal_result_model.R  12_render_reports.R  13_fit_knn_similarity_model.R  14_fit_poisson_goals_model.R  15_regression_diagnostics.R  16_score_2026_fixtures.R  17_matchday_prediction_board.R  18_fit_model_challengers.R  19_simulate_world_cup_champion.R  20_refresh_all.R  21_fit_expanded_model_suite.R  22_build_expanded_feature_population.R  23_fit_population_expansion_models.R  24_distribution_diagnostics.R  25_build_game_archive.R  26_build_local_recording_registry.R  27_build_recording_queue.R  28_film_study_workflow.R  29_render_film_study_review.R  30_launch_film_study_app.R  31_fit_film_study_models.R  32_render_film_study_modeling_report.R  33_render_film_study_quality_report.R  34_process_film_study_session.R  35_export_film_study_session.R  36_fit_film_study_state_engine.R  37_render_film_study_state_engine_report.R  (+6 more)
(+290 files in other folders)
