[project]
name = "world-cup-betting-data"
version = "0.1.0"
description = "Data acquisition scaffold for a 2026 World Cup sports betting model."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
analysis = [
  "pandas>=2.2",
  "pyarrow>=15",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "statsmodels>=0.14",
]
filmstudy = [
  "opencv-python>=4.10",
  "pandas>=2.2",
  "numpy>=1.26",
  "duckdb>=1.0",
  "mss>=9.0",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]
app = [
  "streamlit>=1.30",
  "duckdb>=0.10",
  "pandas>=2.0",
  "plotly>=5.0",
  "altair>=5.0",
  "scikit-learn>=1.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"
